tu vieja le gusta el cachibache

--- a/estructura basica GIT.html
+++ b/estructura basica GIT.html
@@ -2,12 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="/estilos.css">
+    <link rel="stylesheet" href="estilos.css">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-    <h1> holi, es mi primer html</h1>
+    <h1> CORRETE HIJO DE PUTAAAAAAAAAAAAAA</h1>
+    <H2>DALE FLACOOOOOOOOOOO</H2>
 </body>
 </html>
