finalizada la cabecera

--- a/estructura basica GIT.html
+++ b/estructura basica GIT.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<header> <h1>esta es la cabecera pero con menos ganas de patada en los huevos</h1></header>
 <body>
     <h1> CORRETE HIJO DE PUTAAAAAAAAAAAAAA</h1>
     <H2>DALE FLACOOOOOOOOOOO</H2>
