--- a/estructura basica GIT.html
+++ b/estructura basica GIT.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<header> <h1>esta es la cabecera pero con menos ganas de patada en los huevos</h1></header>
+<header> <h1>esta es la cabecera pero con menos ganas de patada en los huevos</h1>
+<h5>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga exercitationem sapiente facere inventore voluptatibus, perspiciatis ad! Magni possimus, in tempora, voluptatibus alias deserunt officiis quasi quos mollitia eligendi commodi animi. Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta nam ducimus neque, cupiditate provident voluptates doloremque facilis ad! Quam fugiat numquam autem nemo quasi dignissimos nulla consequatur sunt dicta soluta?</h5></header>
 <body>
     <h1> CORRETE HIJO DE PUTAAAAAAAAAAAAAA</h1>
     <H2>DALE FLACOOOOOOOOOOO</H2>
